tests/golden/type_errors/generic_method_duplicate_type_parameter.cd
struct Box { value: number }
impl Box {
  fun duplicate<T, T>(value: T): T { return value; }
}
