tests/golden/type_errors/generic_method_duplicate_type_parameter.err
Type error at 3:20: duplicate type parameter `T`
    fun duplicate<T, T>(value: T): T { return value; }
                     ^
